Update hero section text and logo in SL-IT landing page
- Changed hero subtitle to "Collapsing Possibility into Reality".
- Revised manifesto text for clarity and impact.
- Modified logo SVG to streamline design and improve visual consistency.

--- a/0068.html
+++ b/0068.html
@@ -152,7 +152,7 @@
                 <div class="hero-title">
                     <img src="logo.svg" alt="VOID" class="h-48 md:h-64 lg:h-80 xl:h-96 w-auto mx-auto">
                 </div>
-                <p class="text-neutral-300 mt-4 hero-subtitle">Where Ideas Transcend Reality</p>
+                <p class="text-neutral-300 mt-4 hero-subtitle">Collapsing Possibility into Reality</p>
             </div>
             <div class="absolute bottom-10 left-1/2 -translate-x-1/2 text-xs font-syncopate tracking-widest">SCROLL
             </div>
@@ -161,10 +161,8 @@
         <!-- 2. Manifesto Section -->
         <section id="manifesto" class="min-h-screen w-full flex items-center justify-center py-20 md:py-40">
             <div class="container mx-auto px-6 text-center">
-                <p class="manifesto-text text-3xl md:text-5xl lg:text-7xl leading-tight font-light">
-                    We are architects of the <span class="font-semibold text-white">unseen</span>, engineers of <span
-                        class="font-semibold text-white">emotion</span>. We don't just build websites; we craft <span
-                        class="font-semibold text-white">digital dimensions</span> that resonate, provoke, and inspire.
+                <p class="manifesto-text text-2xl md:text-4xl lg:text-6xl leading-tight font-syncopate font-bold">
+                    SL:IT turns possibility into reality. We observe, measure, and collapse the world in the direction we choose. We don't wait - we create.
                 </p>
             </div>
         </section>
