Update process steps and contact information on landing page
- Renamed process steps for clarity: "DIVE" to "DREAM", "JOIN" to "DREAM", "BUILD" to "IDEATION", and "LAUNCH" to "CREATE".
- Updated footer title from "ENTER THE VOID" to "CONTACT TO US".
- Changed contact email from hello@void.com to slit.amazing@gmail.com.
- Replaced logo image for SUNGKYUNKWAN.

--- a/0068.html
+++ b/0068.html
@@ -227,34 +227,30 @@
                     </div>
                     <div class="process-step mb-24 flex items-center gap-8">
                         <div class="w-1/2 text-right">
-                            <h3 class="font-syncopate text-3xl font-bold">01. DIVE</h3>
-                            <p class="text-neutral-400">We immerse ourselves in your world, understanding your vision,
-                                goals, and the universe you want to create.</p>
+                            <h3 class="font-syncopate text-3xl font-bold">01. DREAM</h3>
+                            <p class="text-neutral-400">We share dreams and visions</p>
                         </div>
                         <div class="w-1/2"></div>
                     </div>
                     <div class="process-step mb-24 flex items-center gap-8">
                         <div class="w-1/2"></div>
                         <div class="w-1/2 text-left">
-                            <h3 class="font-syncopate text-3xl font-bold">02. DREAM</h3>
-                            <p class="text-neutral-400">We conceptualize and design the experience, mapping out user
-                                flows and creating visual prototypes from another dimension.</p>
+                            <h3 class="font-syncopate text-3xl font-bold">02. JOIN</h3>
+                            <p class="text-neutral-400">Our team comes together</p>
                         </div>
                     </div>
                     <div class="process-step mb-24 flex items-center gap-8">
                         <div class="w-1/2 text-right">
-                            <h3 class="font-syncopate text-3xl font-bold">03. BUILD</h3>
-                            <p class="text-neutral-400">Our developers weave code into reality, building a performant,
-                                scalable, and pixel-perfect product.</p>
+                            <h3 class="font-syncopate text-3xl font-bold">03. IDEATION</h3>
+                            <p class="text-neutral-400">We conceptualize ideas</p>
                         </div>
                         <div class="w-1/2"></div>
                     </div>
                     <div class="process-step flex items-center gap-8">
                         <div class="w-1/2"></div>
                         <div class="w-1/2 text-left">
-                            <h3 class="font-syncopate text-3xl font-bold">04. LAUNCH</h3>
-                            <p class="text-neutral-400">We deploy the experience into the digital cosmos, ensuring a
-                                smooth liftoff and continued support.</p>
+                            <h3 class="font-syncopate text-3xl font-bold">04. CREATE</h3>
+                            <p class="text-neutral-400">We bring ideas to life</p>
                         </div>
                     </div>
                 </div>
@@ -336,11 +332,11 @@
         <footer id="contact"
             class="min-h-screen w-full flex flex-col items-center justify-center py-20 md:py-40 bg-black">
             <div class="text-center">
-                <h2 class="font-syncopate text-5xl md:text-7xl lg:text-8xl font-bold">ENTER THE VOID</h2>
+                <h2 class="font-syncopate text-5xl md:text-7xl lg:text-8xl font-bold">CONTACT TO US</h2>
                 <p class="mt-4 mb-8 text-neutral-400">Let's create something beyond reality.</p>
-                <a href="mailto:hello@void.com"
+                <a href="mailto:slit.amazing@gmail.com"
                     class="inline-block bg-white text-black font-syncopate font-bold py-4 px-12 rounded-full text-lg hover:scale-105 transition-transform duration-300">
-                    hello@void.com
+                    slit.amazing@gmail.com
                 </a>
             </div>
             <div class="absolute bottom-8 text-center text-xs text-neutral-600">
