Update logos and text in SL-IT landing page
- Replaced the old TREEDI images with a new logo and added a description.
- Updated the SUNGKYUNKWAN logo to display "SKKU" with a subtitle.
- Introduced a new SPEC logo with a description for the SKKU Prep Entrepreneurs' Club.
- Removed outdated TREEDI image files and added the new logo file.

--- a/0068.html
+++ b/0068.html
@@ -301,11 +301,24 @@
                     </div>
                     <div class="flex items-center gap-4">
                         <img src="images/logos/sungkyunkwan.jpg" class="h-20 w-auto rounded-lg" alt="Sungkyunkwan Logo">
-                        <p class="font-syncopate text-4xl font-bold">SUNGKYUNKWAN</p>
+                        <div>
+                            <p class="font-syncopate text-4xl font-bold">SKKU</p>
+                            <p class="text-sm text-neutral-400">Sungkyunkwan University</p>
+                        </div>
                     </div>
                     <div class="flex items-center gap-4">
-                        <img src="images/logos/treedi.png" class="h-20 w-auto rounded-lg" alt="Treedi Logo">
-                        <p class="font-syncopate text-4xl font-bold">TREEDI</p>
+                        <img src="images/logos/treedi-logo.jpg" class="h-20 w-20 rounded-lg bg-white p-0.5 object-cover" alt="Treedi Logo">
+                        <div>
+                            <p class="font-syncopate text-4xl font-bold">TREEDI</p>
+                            <p class="text-sm text-neutral-400">Visualizes your AI conversations as a tree</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-4">
+                        <img src="spec-logo.png" class="h-20 w-auto rounded-lg bg-white p-2" alt="SPEC Logo">
+                        <div>
+                            <p class="font-syncopate text-4xl font-bold">SPEC</p>
+                            <p class="text-sm text-neutral-400">SKKU Prep Entrepreneurs' Club</p>
+                        </div>
                     </div>
                 </div>
                 <!-- Duplicate for seamless loop -->
@@ -320,11 +333,24 @@
                     </div>
                     <div class="flex items-center gap-4">
                         <img src="images/logos/sungkyunkwan.jpg" class="h-20 w-auto rounded-lg" alt="Sungkyunkwan Logo">
-                        <p class="font-syncopate text-4xl font-bold">SUNGKYUNKWAN</p>
+                        <div>
+                            <p class="font-syncopate text-4xl font-bold">SKKU</p>
+                            <p class="text-sm text-neutral-400">Sungkyunkwan University</p>
+                        </div>
                     </div>
                     <div class="flex items-center gap-4">
-                        <img src="images/logos/treedi.png" class="h-20 w-auto rounded-lg" alt="Treedi Logo">
-                        <p class="font-syncopate text-4xl font-bold">TREEDI</p>
+                        <img src="images/logos/treedi-logo.jpg" class="h-20 w-20 rounded-lg bg-white p-0.5 object-cover" alt="Treedi Logo">
+                        <div>
+                            <p class="font-syncopate text-4xl font-bold">TREEDI</p>
+                            <p class="text-sm text-neutral-400">Visualizes your AI conversations as a tree</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-4">
+                        <img src="spec-logo.png" class="h-20 w-auto rounded-lg bg-white p-2" alt="SPEC Logo">
+                        <div>
+                            <p class="font-syncopate text-4xl font-bold">SPEC</p>
+                            <p class="text-sm text-neutral-400">SKKU Prep Entrepreneurs' Club</p>
+                        </div>
                     </div>
                 </div>
             </div>
