Update service descriptions and process steps for clarity and impact
- Revised service titles and descriptions to better reflect capabilities: "Dimension Design" to "FAST EXECUTION", "Reality Weaving" to "VIBE CODING", "Identity Forging" to "VIRAL FOCUS", and "Kinetic Artistry" to "ORGANIZATION".
- Enhanced process step descriptions for improved understanding: "JOIN", "IDEATION", and "CREATE" now include more detailed explanations of team collaboration and product implementation.

--- a/0068.html
+++ b/0068.html
@@ -162,7 +162,8 @@
         <section id="manifesto" class="min-h-screen w-full flex items-center justify-center py-20 md:py-40">
             <div class="container mx-auto px-6 text-center">
                 <p class="manifesto-text text-2xl md:text-4xl lg:text-6xl leading-tight font-syncopate font-bold">
-                    SL:IT turns possibility into reality. We observe, measure, and collapse the world in the direction we choose. We don't wait - we create.
+                    SL:IT turns possibility into reality. We observe, measure, and collapse the world in the direction
+                    we choose. We don't wait - we create.
                 </p>
             </div>
         </section>
@@ -192,24 +193,24 @@
                 <h2 class="font-syncopate text-5xl md:text-7xl font-bold mb-16">CAPABILITIES</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="service-card border border-neutral-800 p-8 rounded-xl text-left">
-                        <h3 class="font-syncopate text-2xl font-bold mb-4">Dimension Design</h3>
-                        <p class="text-neutral-400">Crafting immersive UI/UX that transcends the screen, creating
-                            intuitive and unforgettable user journeys.</p>
+                        <h3 class="font-syncopate text-2xl font-bold mb-4">FAST EXECUTION</h3>
+                        <p class="text-neutral-400">We rapidly plan, validate, and create products with lightning-fast
+                            execution power.</p>
                     </div>
                     <div class="service-card border border-neutral-800 p-8 rounded-xl text-left">
-                        <h3 class="font-syncopate text-2xl font-bold mb-4">Reality Weaving</h3>
-                        <p class="text-neutral-400">Developing robust and scalable web applications with bleeding-edge
-                            technologies and clean code.</p>
+                        <h3 class="font-syncopate text-2xl font-bold mb-4">VIBE CODING</h3>
+                        <p class="text-neutral-400">Through trial and error, we experience vibe coding challenges
+                            firsthand and develop better alternatives.</p>
                     </div>
                     <div class="service-card border border-neutral-800 p-8 rounded-xl text-left">
-                        <h3 class="font-syncopate text-2xl font-bold mb-4">Identity Forging</h3>
-                        <p class="text-neutral-400">Building powerful brand identities and visual systems that tell your
-                            unique story across all mediums.</p>
+                        <h3 class="font-syncopate text-2xl font-bold mb-4">VIRAL FOCUS</h3>
+                        <p class="text-neutral-400">We specialize in creating viral content like Reels and Shorts that
+                            capture attention instantly.</p>
                     </div>
                     <div class="service-card border border-neutral-800 p-8 rounded-xl text-left">
-                        <h3 class="font-syncopate text-2xl font-bold mb-4">Kinetic Artistry</h3>
-                        <p class="text-neutral-400">Bringing static designs to life with meaningful motion design and
-                            fluid interactions that captivate.</p>
+                        <h3 class="font-syncopate text-2xl font-bold mb-4">ORGANIZATION</h3>
+                        <p class="text-neutral-400">We gather daily at one location, working an average of 12 hours with
+                            strong organizational power.</p>
                     </div>
                 </div>
             </div>
@@ -234,13 +235,13 @@
                         <div class="w-1/2"></div>
                         <div class="w-1/2 text-left">
                             <h3 class="font-syncopate text-3xl font-bold">02. JOIN</h3>
-                            <p class="text-neutral-400">Our team comes together</p>
+                            <p class="text-neutral-400">Our team comes together to collaborate and communicate.</p>
                         </div>
                     </div>
                     <div class="process-step mb-24 flex items-center gap-8">
                         <div class="w-1/2 text-right">
                             <h3 class="font-syncopate text-3xl font-bold">03. IDEATION</h3>
-                            <p class="text-neutral-400">We conceptualize ideas</p>
+                            <p class="text-neutral-400">We conceptualize creative ideas and make plans.</p>
                         </div>
                         <div class="w-1/2"></div>
                     </div>
@@ -248,7 +249,7 @@
                         <div class="w-1/2"></div>
                         <div class="w-1/2 text-left">
                             <h3 class="font-syncopate text-3xl font-bold">04. CREATE</h3>
-                            <p class="text-neutral-400">We bring ideas to life</p>
+                            <p class="text-neutral-400">We implement our conceptualized ideas into actual products.</p>
                         </div>
                     </div>
                 </div>
