Enhance SL-IT landing page with service descriptions
- Added descriptions for SOLARBEAM and TREEDI services to clarify their functionalities.
- Adjusted HTML structure for better organization of service titles and descriptions.

--- a/0068.html
+++ b/0068.html
@@ -294,7 +294,11 @@
                     </div>
                     <div class="flex items-center gap-4">
                         <img src="images/logos/solarbeam.png" class="h-20 w-auto rounded-lg" alt="Solarbeam Logo">
-                        <p class="font-syncopate text-4xl font-bold">SOLARBEAM</p>
+                        <div>
+                            <p class="font-syncopate text-4xl font-bold">SOLARBEAM</p>
+                            <p class="text-sm text-neutral-400">AI service to find Solana blockchain
+                                transactions</p>
+                        </div>
                     </div>
                     <div class="flex items-center gap-4">
                         <img src="images/logos/sungkyunkwan.jpg" class="h-20 w-auto rounded-lg" alt="Sungkyunkwan Logo">
@@ -304,7 +308,8 @@
                         </div>
                     </div>
                     <div class="flex items-center gap-4">
-                        <img src="images/logos/treedi-logo.jpg" class="h-20 w-20 rounded-lg bg-white p-0.5 object-cover" alt="Treedi Logo">
+                        <img src="images/logos/treedi-logo.jpg" class="h-20 w-20 rounded-lg bg-white p-0.5 object-cover"
+                            alt="Treedi Logo">
                         <div>
                             <p class="font-syncopate text-4xl font-bold">TREEDI</p>
                             <p class="text-sm text-neutral-400">Visualizes your AI conversations as a tree</p>
@@ -326,7 +331,11 @@
                     </div>
                     <div class="flex items-center gap-4">
                         <img src="images/logos/solarbeam.png" class="h-20 w-auto rounded-lg" alt="Solarbeam Logo">
-                        <p class="font-syncopate text-4xl font-bold">SOLARBEAM</p>
+                        <div>
+                            <p class="font-syncopate text-4xl font-bold">SOLARBEAM</p>
+                            <p class="text-sm text-neutral-400">AI service to find Solana blockchain
+                                transactions</p>
+                        </div>
                     </div>
                     <div class="flex items-center gap-4">
                         <img src="images/logos/sungkyunkwan.jpg" class="h-20 w-auto rounded-lg" alt="Sungkyunkwan Logo">
@@ -336,7 +345,8 @@
                         </div>
                     </div>
                     <div class="flex items-center gap-4">
-                        <img src="images/logos/treedi-logo.jpg" class="h-20 w-20 rounded-lg bg-white p-0.5 object-cover" alt="Treedi Logo">
+                        <img src="images/logos/treedi-logo.jpg" class="h-20 w-20 rounded-lg bg-white p-0.5 object-cover"
+                            alt="Treedi Logo">
                         <div>
                             <p class="font-syncopate text-4xl font-bold">TREEDI</p>
                             <p class="text-sm text-neutral-400">Visualizes your AI conversations as a tree</p>
