--- a/0068.html
+++ b/0068.html
@@ -283,7 +283,7 @@
                             capture attention instantly.</p>
                     </div>
                     <div class="service-card border border-neutral-800 p-8 rounded-xl text-left">
-                        <h3 class="font-syncopate text-2xl font-bold mb-4">ORGANIZATION</h3>
+                        <h3 class="font-syncopate text-2xl font-bold mb-4">INTENSITY</h3>
                         <p class="text-neutral-400">We gather daily at one location, working an average of 12 hours with
                             strong organizational power.</p>
                     </div>
