--- a/0068.html
+++ b/0068.html
@@ -478,7 +478,7 @@
         <footer id="contact"
             class="min-h-screen w-full flex flex-col items-center justify-center py-20 md:py-40 bg-black">
             <div class="text-center">
-                <h2 class="font-syncopate text-5xl md:text-7xl lg:text-8xl font-bold">CONTACT TO US</h2>
+                <h2 class="font-syncopate text-5xl md:text-7xl lg:text-8xl font-bold">CONTACT US</h2>
                 <p class="mt-4 mb-8 text-neutral-400">Let's create something beyond reality.</p>
                 <a href="mailto:slit.amazing@gmail.com"
                     class="inline-block bg-white text-black font-syncopate font-bold py-4 px-12 rounded-full text-lg hover:scale-105 transition-transform duration-300">
