--- a/0068.html
+++ b/0068.html
@@ -252,7 +252,7 @@
             <div class="container mx-auto px-6 text-center relative z-10 max-w-5xl">
                 <!-- Main headline: priority focus -->
                 <h1 class="manifesto-headline font-syncopate font-bold text-[clamp(2.5rem,9vw,9rem)]">
-                    WE DON'T WAIT ??WE <span id="typed-word" data-text="CREATE." class="inline-block">CREATE.</span>
+                    we don't wait - we <span id="typed-word" data-text="create" class="inline-block">create</span>
                 </h1>
 
                 <!-- Breathing space divider -->
