Update Navigation and Section Titles for Clarity
- Changed navigation links to reflect updated section names: "WORKS" to "APPROACH", "SERVICES" to "PROCESS", and added "TEAM".
- Revised the section title from "OUR APPROACH" to "OUR WORKS" for consistency with navigation.

--- a/0068.html
+++ b/0068.html
@@ -223,8 +223,9 @@
             </a>
             <nav class="hidden md:flex items-center gap-8 font-syncopate text-sm font-bold">
                 <a href="#manifesto" class="nav-link">MANIFESTO</a>
-                <a href="#works" class="nav-link">WORKS</a>
-                <a href="#services" class="nav-link">SERVICES</a>
+                <a href="#approach" class="nav-link">WORKS</a>
+                <a href="#process" class="nav-link">PROCESS</a>
+                <a href="#team" class="nav-link">TEAM</a>
                 <a href="#contact" class="nav-link">CONTACT</a>
             </nav>
         </div>
@@ -283,7 +284,7 @@
         <!-- 3. Approach Section -->
         <section id="approach" class="w-full py-20 md:py-40">
             <div class="container mx-auto px-6">
-                <h2 class="font-syncopate text-5xl md:text-7xl font-bold text-center mb-24">OUR APPROACH</h2>
+                <h2 class="font-syncopate text-5xl md:text-7xl font-bold text-center mb-24">OUR WORKS</h2>
                 
                 <!-- íƒ€ìž„ë¼ì¸ ì»¨í…Œì´ë„ˆ -->
                 <div class="max-w-7xl mx-auto relative">
